--- a/Frotend_React/my-frontend/src/index.css
+++ b/Frotend_React/my-frontend/src/index.css
@@ -6,7 +6,7 @@
 
 .bg-image img{
     width:100%;
-    height: 170px;
+    height: 160px;
 }
 .navbar{
     padding-left: 40px;
@@ -148,19 +148,17 @@ img {
   }
   .for-2{
    background-color: #c7c6c6;
-   height: 600px;
-    margin: 90px 0px;
+   height: 650px;
+    margin: 90px 0 ;
     margin-left: 8px;
     width: 600px;
-    
-    
+      margin-right: 58px;
   }
   .for-usd{
-   padding-top: 200px;
-    place-items: center;
+   padding-top: 230px;  
     color: white;
     font-weight: 700;
-    font-size: 40px;
+    font-size: 40px; 
   }
   .btn-flase{
     background-color: rgb(250, 245, 245);
@@ -172,14 +170,23 @@ img {
     margin-left: 230px;
     margin-top: 20px;
   }
-  .col-lg-2{
-    margin-top: 90px;
-   height: 20px;
-    width: 300px;
-    margin-right: 15px;
-    text-align: center;
-   display: block;
-   
-   
+  .pro-usd{
+   margin-top: 90px;
+   margin-right: 40px;
+   width: 275px;  
+   padding: 0%; 
   }
-  
+.footer{
+ width:1517px;
+margin-left: -110px;
+}
+.support{
+  width:1517px;
+  margin-left: -110px;
+  margin-bottom: 40px;
+}
+.map{
+  width:1520px;
+  margin-left: -117px;
+  margin-top: 70px;
+}
