--- a/Frotend_React/my-frontend/src/index.css
+++ b/Frotend_React/my-frontend/src/index.css
@@ -6,7 +6,8 @@
 
 .bg-image img{
     width:100%;
-    height: 160px;
+    height: 150px;
+  
 }
 .navbar{
     padding-left: 40px;
@@ -172,9 +173,11 @@ img {
   }
   .pro-usd{
    margin-top: 90px;
-   margin-right: 40px;
-   width: 275px;  
-   padding: 0%; 
+   margin-right: 30px;
+  margin-left: 10px;
+  width: 275px;
+
+
   }
 .footer{
  width:1517px;
@@ -190,3 +193,5 @@ margin-left: -110px;
   margin-left: -117px;
   margin-top: 70px;
 }
+
+
